docs(servers): Update server setup documentation with Java 25 JVM presets
- Add complete server command line arguments (--assets, -b, --auth-mode, --backup, --allow-op, etc.)
- Document Assets.zip requirement alongside HytaleServer.jar
- Add 4 JVM presets for Java 25: ZGC (16GB+), Shenandoah (8-16GB), G1GC Optimized (4-12GB), G1GC Minimal (2-4GB)
- Document Java 25 specific features (UseCompactObjectHeaders, ShenandoahGCMode=generational)
- Add memory allocation guide by player count
- List deprecated/removed JVM flags for Java 25
- Add troubleshooting section
- Update French translations

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>